Opdateret ny student session

--- a/produkt.html
+++ b/produkt.html
@@ -100,7 +100,7 @@
 
         <script type="text/javascript">
             window.osc = Object.create(objectStorageClass);
-            osc.init('studentSession_7');
+            osc.init('studentSession_ep');
             osc.exist('apiData');
 
             var wpc = Object.create(writeProcessClass);
