et par rettelser i teksten

--- a/produkt.html
+++ b/produkt.html
@@ -30,7 +30,7 @@
 
                     <div class="text_1 border_blue text_clipborad">
 
-                        <h1>Læs mere om emnevalget</h1>
+                        <h1>Emnevalg</h1>
 
                         <p>
                             Når du har valgt fag, skal du vælge et emne, der hverken er for bredt eller for smalt. Denne emneafgrænsning sker sammen med din vejleder. 
